WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123165
[sh4][mips][arm] Crashes in JSC for 32-bit
https://bugs.webkit.org/show_bug.cgi?id=123165
Summary
[sh4][mips][arm] Crashes in JSC for 32-bit
Julien Brianceau
Reported
2013-10-22 09:21:43 PDT
Tag and payload are swapped in V_JITOperation_EJJJ implementation for 32-bit in JITInlines.h Also, some EABI_32BIT_DUMMY_ARG are missing in this file too.
Attachments
32-bit fixes in JITInlines.h
(3.26 KB, patch)
2013-10-22 09:26 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-10-22 09:26:43 PDT
Created
attachment 214864
[details]
32-bit fixes in JITInlines.h
WebKit Commit Bot
Comment 2
2013-10-22 10:03:19 PDT
Comment on
attachment 214864
[details]
32-bit fixes in JITInlines.h Clearing flags on attachment: 214864 Committed
r157797
: <
http://trac.webkit.org/changeset/157797
>
WebKit Commit Bot
Comment 3
2013-10-22 10:03:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug